--- a/Test/views/knowYourPlace.html
+++ b/Test/views/knowYourPlace.html
@@ -6,43 +6,61 @@
         <script src="javascripts/app.js" type="text/javascript"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <style>
-            body {
-              margin: 0;
-              font-family: Arial, Helvetica, sans-serif;
-            }
+          #map_wrapper {
+            margin-left: 30%; /* should match sidebar width */
+            overflow: hidden; /* cut off any overflow */
+            height: 100%; /* fill up main div height */
+          }
 
-            .topnav {
-              overflow: hidden;
-              background-color: #333;
-            }
+          #sidebar {
+            width: 30%; /* adjust sidebar width as percentage of main div */
+            max-height: 100%; /* Never exceed main div height on small screens */
+            height: 600px;
+            position: absolute;
+            background: #131418;
+          }
 
-            .topnav a {
-              float: left;
-              color: #f2f2f2;
-              text-align: center;
-              padding: 14px 16px;
-              text-decoration: none;
-              font-size: 17px;
-            }
+          #sidebar span {
+            max-height: 100%;
+            height: 600px;
+            overflow: auto;
+            color: #999;
+          }
 
-            .topnav a:hover {
-              background-color: #ddd;
-              color: black;
-            }
+          .main {
+            max-width: 100vw; /* set max desired width for the ENTIRE set up */
+            height: 600px; /* set max desired height for the ENTIRE set up */
+            max-height: 100vh; /* make sure entire setup height never exceeds device height */
+          }
 
-            .topnav a.active {
-              background-color: #337AB7;
-              color: white;
-            }
-            .container {
-                position:relative;
-                padding-top: 60px;
-                right:450px;
-                width:500px;
+          /* Style the button that is used to open and close the collapsible content */
+          .collapsible {
+            background-color: #eee;
+            color: #444;
+            cursor: pointer;
+            padding: 18px;
+            width: 100%;
+            border: none;
+            text-align: middle;
+            outline: none;
+            font-size: 15px;
+          }
 
-            }
+          /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+          .active, .collapsible:hover {
+            background-color: #ccc;
+          }
 
-            </style>
+          /* Style the collapsible content. Note: hidden by default */
+          .content {
+            padding: 0 18px;
+            background-color: white;
+            max-height: 0;
+            overflow: hidden;
+            transition: max-height 0.2s ease-out;
+          }
+
+          </style>
     </head>
     <body data-spy="scroll" data-target=".scrollspy">
 
@@ -176,41 +194,5 @@
     </form>
       </div>
 
-
-
-         <div class="container">
-                      <div class="jumbotron">
-         <div ng-controller="KnowYourPlaceController">
-        <p><span aria-hidden="true" class="glyphicon text-primary glyphicon-search"></span> Enter details to find your Dream Home!:
-        </p>
-            Enter Zip Code: <input type="text" name="zipcode" ng-model="zipcode" value=""/></br>
-            Enter Food: <input type="text" name="name" ng-model="name" value=""/></br>
-            <h3>Select some options that you care about in your neighborhood.</h3>
-               <form method="get" action="/person">
-                  <p>
-                     <select name="name" multiple size="8">
-                        <option value="food">food</option>
-                        <option value="nightlife">nightlife</option>
-                        <option value="kids">kids</option>
-                        <option value="daycare">daycare</option>
-                     </select>
-                  </p>
-                  <input type="submit" value="Submit">
-                  <p>Hold down the Ctrl (windows) / Command (Mac) button to select multiple options.</p>
-               </form>
-<!--             Sex: <input type="text" name="sex" ng-model="sex" value=""/></br>
-            RelationshipStatus <input type="text" name="RelationshipStatus" ng-model="RelationshipStatus" value=""/></br> 
-            Birthyear <input type="text" name="Birthyear" ng-model="Birthyear" value=""/></br> -->
-            <button type="button" ng-click="knowFriends()" class="button">Go!</button></br>
-            </p>
-        <table border="0" cellpadding="10" cellspacing="1" width="500" align="center"> 
-            <tr> 
-            <td> Categories </td>
-            <tr ng-repeat="x in data"> 
-            <td> {{ x }} </td>
-            </tr>
-        </table>
-        </div>
-        </div>
     </body>
 </html>
