--- a/Test/views/knowYourPlace.html
+++ b/Test/views/knowYourPlace.html
@@ -6,75 +6,71 @@
         <script src="javascripts/app.js" type="text/javascript"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <style>
-          #map_wrapper {
-            margin-left: 30%; /* should match sidebar width */
-            overflow: hidden; /* cut off any overflow */
-            height: 100%; /* fill up main div height */
-          }
+      #map_wrapper {
+          margin-left: 30%; /* should match sidebar width */
+          overflow: hidden; /* cut off any overflow */
+          height: 100%; /* fill up main div height */
+        }
 
-          #sidebar {
-            width: 30%; /* adjust sidebar width as percentage of main div */
-            max-height: 100%; /* Never exceed main div height on small screens */
-            height: 600px;
-            position: absolute;
-            background: #131418;
-          }
+        #sidebar {
+          width: 30%; /* adjust sidebar width as percentage of main div */
+          max-height: 100%; /* Never exceed main div height on small screens */
+          height: 600px;
+          position: absolute;
+          background: #131418;
+        }
 
-          #sidebar span {
-            max-height: 100%;
-            height: 600px;
-            overflow: auto;
-            color: #999;
-          }
+        #sidebar span {
+          max-height: 100%;
+          height: 600px;
+          overflow: auto;
+          color: #999;
+        }
 
-          .main {
-            max-width: 100vw; /* set max desired width for the ENTIRE set up */
-            height: 600px; /* set max desired height for the ENTIRE set up */
-            max-height: 100vh; /* make sure entire setup height never exceeds device height */
-          }
+        .main {
+          max-width: 100vw; /* set max desired width for the ENTIRE set up */
+          height: 600px; /* set max desired height for the ENTIRE set up */
+          max-height: 100vh; /* make sure entire setup height never exceeds device height */
+        }
 
-          /* Style the button that is used to open and close the collapsible content */
-          .collapsible {
-            background-color: #eee;
-            color: #444;
-            cursor: pointer;
-            padding: 18px;
-            width: 100%;
-            border: none;
-            text-align: middle;
-            outline: none;
-            font-size: 15px;
-          }
+        /* Style the button that is used to open and close the collapsible content */
+        .collapsible {
+          background-color: #eee;
+          color: #444;
+          cursor: pointer;
+          padding: 18px;
+          width: 100%;
+          border: none;
+          text-align: middle;
+          outline: none;
+          font-size: 15px;
+        }
 
-          /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-          .active, .collapsible:hover {
-            background-color: #ccc;
-          }
+        /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+        .active, .collapsible:hover {
+          background-color: #ccc;
+        }
 
-          /* Style the collapsible content. Note: hidden by default */
-          .content {
-            padding: 0 18px;
-            background-color: white;
-            max-height: 0;
-            overflow: hidden;
-            transition: max-height 0.2s ease-out;
-          }
+        /* Style the collapsible content. Note: hidden by default */
+        .content {
+          padding: 0 18px;
+          background-color: white;
+          max-height: 0;
+          overflow: hidden;
+          transition: max-height 0.2s ease-out;
+        }
 
-          </style>
-    </head>
-    <body data-spy="scroll" data-target=".scrollspy">
-
-        <div class="topnav">
-         <a>Zelp</a>
-          <a class="active" href="/">Home</a>
-            <a href="/findYourPlace">Find Your Place</a>
-            <a href="/knowYourPlace">Know Your Place</a>
-        </div>
-
-        <header></header>
+    </style>
+  </head>
+  <body>
+    <!-- initilize map -->
+    <script>
+      function initMap() {var map = new google.maps.Map(document.getElementById('map'), {center: {lat: 36.1699,lng: -115.1398},zoom: 12,})}
+    </script>
 
 
-        <div class="main" ng-controller="KnowYourPlaceController2">
+    <!--Your Map setup -->
+    <div class="main" ng-controller="findYourPlaceController">
 
       <div id="sidebar" class="pre-scrollable">
         <form>
@@ -84,49 +80,31 @@
 
           
           <!-- <p>Ready to find your dream home?</p> -->
-          <p>Find the best neighborhood for your preferences!</p>
+          <p>Enter details to find your Dream Home!</p>
+
+          <button class="collapsible" type="button" >Zip Code</button>
+            <div class="content">
+
+            <div> Enter Zip Code: <input type="text" name="zipcode" ng-model="zipcode" value=""/></br> </div>
+
+            </div>
 
           <button class="collapsible" type="button" >Food</button>
             <div class="content">
 
             <div>
+                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.cuisine" value="cuisine">
+                <label for="cuisine">Cuisine</label>
+              </div>
+
+              <div>
+                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.pricerange" value="pricerange">
+                <label for="pricerange">Price</label>
+              </div>
+
+              <div>
                 <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.delivery" value="delivery">
                 <label for="delivery">Delivery</label>
-              </div>
-
-              <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.onedollarsign" value="onedollarsign">
-                <label for="onedollarsign">$</label>
-              </div>
-
-              <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.twodollarsigns" value="twodollarsigns">
-                <label for="twodollarsigns">$$</label>
-              </div>
-
-              <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.threedollarsigns" value="threedollarsigns">
-                <label for="threedollarsigns">$$$</label>
-              </div>
-
-              <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.fourdollarsigns" value="fourdollarsigns">
-                <label for="fourdollarsigns">$$$$</label>
-              </div>
-
-              <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.weekends" value="weekends">
-                <label for="weekends">Open on Weekends</label>
-              </div>
-
-              <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.vegan" value="vegan">
-                <label for="vegan">Vegan Options</label>
-              </div>
-
-              <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.vegetarian" value="vegetarian">
-                <label for="vegetarian">Vegetarian Options</label>
               </div>
 
             </div>
@@ -148,43 +126,30 @@
               </div>
 
             </div>
-          <button class="collapsible" type="button">Coffee and Tea</button>
+          <button class="collapsible" type="button">Housing</button>
             <div class="content">
               <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.cafes" value="cafes">
-                <label for="cafes">Cafes</label>
+                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.rentprice" value="rentprice">
+                <label for="rentprice">Rent Price</label>
               </div>
 
               <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.noise" value="noise">
-                <label for="noise">Low Noise Level</label>
-              </div>
-            </div>
-          <button class="collapsible" type="button">Kids and Family</button>
-            <div class="content">
-              <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.childcare" value="childcare">
-                <label for="childcare">Childcare</label>
+                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.listprice" value="listprice">
+                <label for="listprice">List Price</label>
               </div>
 
               <div>
-                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.recreation" value="recreation">
-                <label for="recreation">Recreation</label>
+                <input type="checkbox" id="preferences" name="preferences[]" ng-model="p.housevalue" value="housevalue">
+                <label for="housevalue">House Value</label>
               </div>
             </div>
+
           
-          <button class="collapsible" type="button">Rent</button>
-            <div class="content">
-            <p>Rent</p>
-            </div>
           
           <center>
           <button type="submit" ng-click="Find(p)" class="button">Go!</button>
           <input type="button" onclick="location.href='/';" value="Go Back" /> </center>
-      
-      <div id="optimized_zipcode_display">
-        {{zipcode}}
-      </div>        
+       
         
         </span>
       </fieldset>
@@ -194,5 +159,40 @@
     </form>
       </div>
 
-    </body>
+      <div id="map_wrapper">
+        <div id="map" style='width: 100%; height: 100%;'></div>
+      </div>
+
+
+    </div>
+
+
+    
+
+
+    
+
+     <!-- Event listener for Collapsible objects -->
+    <script>
+      var coll = document.getElementsByClassName("collapsible");
+      var i;
+
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function() {
+          this.classList.toggle("active");
+          var content = this.nextElementSibling;
+          if (content.style.maxHeight){
+            content.style.maxHeight = null;
+          } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+          } 
+        });
+      }
+    </script>
+
+
+  <!-- Load google API in the footer. -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrq-B9Ql50MXlr9RwdwzCHcwno2hq3h_U&callback=initMap" async defer></script>
+      
+  </body>
 </html>
