handover to Nick for queries

--- a/Test/views/knowYourPlace.html
+++ b/Test/views/knowYourPlace.html
@@ -70,7 +70,7 @@
 
 
     <!--Your Map setup -->
-    <div class="main" ng-controller="findYourPlaceController">
+    <div class="main" ng-controller="knowYourPlaceController2">
 
       <div id="sidebar" class="pre-scrollable">
         <form>
