--- a/Test/views/findYourPlace.html
+++ b/Test/views/findYourPlace.html
@@ -187,7 +187,7 @@
           <input type="button" onclick="location.href='/';" value="Go Back" /> </center>
       
       <div id="optimized_zipcode_display">
-        {{zipcode}}
+        The best zipcode for is: {{zipcode}}
       </div>        
         
         </span>
