summary and put info on markers

--- a/Test/views/knowYourPlace.html
+++ b/Test/views/knowYourPlace.html
@@ -116,19 +116,16 @@
         }
         
       }
-
       function loadBusinessData(){
-        var data = [{"business_id":"7pw8fNAMV9eLacqsWgn6lg","name":"Las Vegas Vital Records","neighborhood":"Summerlin","address":"2232 Brighton Shore St","city":"Las Vegas","state":"NV","postal_code":"89133","latitude":36.200629,"longitude":-115.271155,"stars":1.0,"review_count":5,"is_open":1,"attributes":null,"categories":"Courthouses, Public Services & Government","hours":{"Monday":"9:0-17:0","Tuesday":"9:0-17:0","Wednesday":"9:0-17:0","Thursday":"9:0-17:0","Friday":"9:0-17:0"}},
+        // Send a request for the location data to the server, and provide a callback
+        // function that will be called when the data has been retrieved
+      var data = [{"business_id":"7pw8fNAMV9eLacqsWgn6lg","name":"Las Vegas Vital Records","neighborhood":"Summerlin","address":"2232 Brighton Shore St","city":"Las Vegas","state":"NV","postal_code":"89133","latitude":36.200629,"longitude":-115.271155,"stars":1.0,"review_count":5,"is_open":1,"attributes":null,"categories":"Courthouses, Public Services & Government","hours":{"Monday":"9:0-17:0","Tuesday":"9:0-17:0","Wednesday":"9:0-17:0","Thursday":"9:0-17:0","Friday":"9:0-17:0"}},
         {"business_id":"rmqbBREx12wU80q_moTfGg","name":"Red Rock Photography Studios","neighborhood":"","address":"","city":"Las Vegas","state":"NV","postal_code":"89133","latitude":36.18,"longitude":-115.14,"stars":5.0,"review_count":3,"is_open":0,"attributes":null,"categories":"Photographers, Event Planning & Services","hours":{"Monday":"9:0-17:0","Tuesday":"9:0-17:0","Wednesday":"9:0-17:0","Thursday":"9:0-17:0","Friday":"9:0-17:0"}},
         {"business_id":"MBStgZpjz6BxS_edFOiEDw","name":"Wildlife Habitat","neighborhood":"The Strip","address":"3555 Las Vegas Blvd S","city":"Las Vegas","state":"NV","postal_code":"89133","latitude":36.1163563463,"longitude":-115.172371485,"stars":3.5,"review_count":47,"is_open":1,"attributes":{"BikeParking":"False","BusinessAcceptsCreditCards":"False","BusinessParking":"{'garage': True, 'street': False, 'validated': False, 'lot': True, 'valet': False}","GoodForKids":"True"},"categories":"Zoos, Active Life, Local Flavor","hours":null},
         {"business_id":"vYeVKt2S1zMTMSkVQgTsAA","name":"My Affordable Handyman","neighborhood":"Northwest","address":"3450 N Hualapai Way","city":"Las Vegas","state":"NV","postal_code":"89133","latitude":36.2229219,"longitude":-115.314041,"stars":1.0,"review_count":4,"is_open":0,"attributes":{"BusinessAcceptsCreditCards":"False"},"categories":"Handyman, Home Services, Professional Services, Boat Repair","hours":{"Monday":"7:0-18:30","Tuesday":"7:0-18:30","Wednesday":"7:0-18:30","Thursday":"7:0-18:30","Friday":"7:0-18:30","Saturday":"7:0-18:30"}}
         ];
-        // Send a request for the location data to the server, and provide a callback
-        // function that will be called when the data has been retrieved
-
-
-        //$.get('/knowYourPlace/:zipcode', function(data) {
-
+        var zipCode = document.getElementById('zipCode').value;
+        $.get('/knowYourPlace/'+zipCode, function(data) {
             for(var i = 0; i < data.length; i++) {
                 var business = data[i];
                 var latitude = business.latitude;
@@ -143,27 +140,21 @@
                                  "Rating: " + rating + '<br>' +
                                  "Delivery: " + delivery + '<br>' +
                                  "Takeout: " + takeout;
-
                 // Create a marker for this business
-
                 var latlng = new google.maps.LatLng(latitude,longitude);
                 var marker = new google.maps.Marker({
                     position: latlng,
                     title: name,
                 });
-
                 marker.setMap(map);
-
                 marker['infowindow'] = new google.maps.InfoWindow({
                     content: contentStr
                 });
-
                 google.maps.event.addListener(marker, 'click', function() {
                     this['infowindow'].open(map, this);
                 });
             }
-
-       // });
+       });
       }
     </script>
 
@@ -184,7 +175,7 @@
           <button class="collapsible" type="button" >Zip Code</button>
             <div class="content">
 
-            <div> Enter Zip Code: <input type="text" id="zipCode" name="zipcode" ng-model="zipcode" value=""/></br> </div>
+            <div> Enter Zip Code: <input type="text" id="zipCode" name="zipcode" ng-model="p.zipcode" value=""/></br> </div>
 
             </div>
 
@@ -247,10 +238,17 @@
           
           <center>
           <button type="submit" onclick="updateMap()" ng-click="Find(p)" class="button">Go!</button>
-          <button type="button" onclick="loadBusinessData()">Try it!</button><br>
+          <button type="button" onclick="loadBusinessData()" ng-click="knowFriends(p)">Try it!</button><br>
           <input type="button" onclick="location.href='/';" value="Go Back" /> </center>
-       
-        
+          <p> The zipcode is: {{ p.zipcode }}</p>
+          <p> Average Rent Price: ${{ data.RentPrice }} </p>
+          <p> Average List Price: ${{ data.ListPrice }} </p>
+          <p> Average House Value Per Square Feet: ${{ data.Value }} </p> 
+          <p> Most popular neighborhood: {{ data.neighborhood }} </p> 
+          <p> Average business rating: {{ data.avg_stars }} </p>
+          <p> Average number of reviews: {{ data.avg_reviews }} </p>
+          <p> Average price range of businesses: {{ data.avg_price_range }} </p>
+
         </span>
       </fieldset>
 
