--- a/Test/views/findYourPlace.html
+++ b/Test/views/findYourPlace.html
@@ -60,7 +60,174 @@
   <body>
     <!-- initilize map -->
     <script>
-      function initMap() {var map = new google.maps.Map(document.getElementById('map'), {center: {lat: 36.1699,lng: -115.1398},zoom: 12,})}
+      var map;
+      var geocoder;
+      var validZips = ['88901', '88905', '89101', '89102', '89104', '89106', '89107', '89108', '89109', 
+      '89110', '89116', '89117', '89124', '89125', '89126', '89127', '89128', '89129', '89130', '89131', '89133', '89134', '89136'
+      , '89137', '89138', '89143', '89144', '89145', '89146', '89147', '89149', '89151', '89152', '89153', '89154'
+      , '89155', '89157', '89161', '89162', '89163', '89164', '89166', '89185'];
+
+      function initMap() {
+        geocoder = new google.maps.Geocoder();
+        map = new google.maps.Map(document.getElementById('map'), 
+          {center: {lat: 36.1699,lng: -115.1398},
+          zoom: 8,
+        });
+      }
+      var app = angular.module('angularjsNodejsTutorial',[]);
+      app.controller('findYourPlaceController', function($scope, $http) {
+          console.log("controller activated")
+          $scope.Find = function(p) {
+              //var request = $http.get('/findYourPlace?'+ $scope.p);
+              console.log($scope.p);
+              var request = $http.get('/findYourPlace/'+ $scope.p.delivery +'/'+ $scope.p.onedollarsign + '/'+$scope.p.twodollarsigns +'/'+$scope.p.threedollarsigns +'/'+$scope.p.fourdollarsigns +'/'+$scope.p.weekends +'/'+$scope.p.vegan+'/'+$scope.p.vegetarian+'/'+$scope.p.bars+'/'+$scope.p.clubs+'/'+$scope.p.casinos+'/'+$scope.p.cafes+'/'+$scope.p.noise+'/'+$scope.p.childcare+'/'+$scope.p.recreation+'/'+$scope.p.low+'/'+$scope.p.mid+'/'+$scope.p.high);
+              console.log("find function activated in controller");
+              request.success(function(data) {
+                  $scope.zipcode = data[0].postal_code;
+                  console.log(data[0].postal_code)
+                  var request2 = $http.get('/findYourPlace/'+$scope.zipcode);
+                  geocoder = new google.maps.Geocoder();
+                  var zipCode = 89108
+                  var valid = false;
+                  var validZip = '';
+                  for (i = 0; i < validZips.length; i++){
+                      validZip = validZips[i];
+                      console.log("zipCode: " + zipCode + "\n validZip: " + validZip);
+                      if (zipCode == validZip){
+                          console.log("zipCode is valid");
+                          valid = true;
+                      }
+                  }
+
+                  if (valid){
+                      var lat = '';
+                      var lng = '';
+                      geocoder.geocode( { 'address': zipCode}, function(results, status){
+                          if (status == google.maps.GeocoderStatus.OK) {
+                              map.setCenter(results[0].geometry.location);
+                              lat = results[0].geometry.location.lat();
+                              lng = results[0].geometry.location.lng();
+                          } else {
+                              alert("Geocode was not successful for the following reason: " + status);
+                          }
+                      });
+                      //var center = new google.maps.LatLng(lat,lng);
+                      //map.panTo(center);
+                      map.setZoom(11);
+                      /*var customizedZipText = document.getElementById('zipCodeEntered');
+                      customizedZipText.innerHTML = 'Your Zip Code: ' + zipCode;*/
+                  } else {
+                      alert("Invalid zipcode: The zipcode you entered is not in Las Vegas. Please try again.");
+                  }
+                  request2.success(function(data) {
+                      $scope.data = data;
+                      for(var i = 0; i < data.length; i++) {
+                    var business = data[i];
+                    var latitude = business.latitude;
+                    var longitude = business.longitude;
+                    var delivery = business.delivery;
+                    var takeout = business.takeout;
+                    var name = business.name;
+                    var address = business.address;
+                    var rating = business.stars;
+                    var contentStr = "Name: " + name + '<br>' + 
+                                     "Address: " + address + '<br>' + 
+                                     "Rating: " + rating + '<br>' +
+                                     "Delivery: " + delivery + '<br>' +
+                                     "Takeout: " + takeout;
+                    // Create a marker for this business
+                    var latlng = new google.maps.LatLng(latitude,longitude);
+                    var marker = new google.maps.Marker({
+                        position: latlng,
+                        title: name,
+                    });
+                    marker.setMap(map);
+                    marker['infowindow'] = new google.maps.InfoWindow({
+                        content: contentStr
+                    });
+                    google.maps.event.addListener(marker, 'click', function() {
+                        this['infowindow'].open(map, this);
+                    });
+                }
+                  });
+                  request2.error(function(data){
+                      console.log('err');
+                  });                  
+                  });
+              request.error(function(data) {
+                  console.log('err');
+              });
+          };
+          $scope.FindPlace = function(p) {
+              geocoder = new google.maps.Geocoder();
+              var zipCode = 89108
+              var valid = false;
+              var validZip = '';
+              for (i = 0; i < validZips.length; i++){
+                  validZip = validZips[i];
+                  console.log("zipCode: " + zipCode + "\n validZip: " + validZip);
+                  if (zipCode == validZip){
+                      console.log("zipCode is valid");
+                      valid = true;
+                  }
+              }
+
+              if (valid){
+                  var lat = '';
+                  var lng = '';
+                  geocoder.geocode( { 'address': zipCode}, function(results, status){
+                      if (status == google.maps.GeocoderStatus.OK) {
+                          map.setCenter(results[0].geometry.location);
+                          lat = results[0].geometry.location.lat();
+                          lng = results[0].geometry.location.lng();
+                      } else {
+                          alert("Geocode was not successful for the following reason: " + status);
+                      }
+                  });
+                  //var center = new google.maps.LatLng(lat,lng);
+                  //map.panTo(center);
+                  map.setZoom(11);
+                  /*var customizedZipText = document.getElementById('zipCodeEntered');
+                  customizedZipText.innerHTML = 'Your Zip Code: ' + zipCode;*/
+              } else {
+                  alert("Invalid zipcode: The zipcode you entered is not in Las Vegas. Please try again.");
+              }
+              request.success(function(data) {
+                  $scope.data = data;
+                  for(var i = 0; i < data.length; i++) {
+                var business = data[i];
+                var latitude = business.latitude;
+                var longitude = business.longitude;
+                var delivery = business.delivery;
+                var takeout = business.takeout;
+                var name = business.name;
+                var address = business.address;
+                var rating = business.stars;
+                var contentStr = "Name: " + name + '<br>' + 
+                                 "Address: " + address + '<br>' + 
+                                 "Rating: " + rating + '<br>' +
+                                 "Delivery: " + delivery + '<br>' +
+                                 "Takeout: " + takeout;
+                // Create a marker for this business
+                var latlng = new google.maps.LatLng(latitude,longitude);
+                var marker = new google.maps.Marker({
+                    position: latlng,
+                    title: name,
+                });
+                marker.setMap(map);
+                marker['infowindow'] = new google.maps.InfoWindow({
+                    content: contentStr
+                });
+                google.maps.event.addListener(marker, 'click', function() {
+                    this['infowindow'].open(map, this);
+                });
+            }
+              });
+              request.error(function(data){
+                  console.log('err');
+              });
+          };
+      });
     </script>
 
 
@@ -183,7 +350,7 @@
             </div>
           
           <center>
-          <button type="submit" ng-click="Find(p)" class="button">Go!</button>
+          <button type="submit" ng-click="Find(p); FindPlace(p)" class="button">Go!</button>
           <input type="button" onclick="location.href='/';" value="Go Back" /> </center>
       
       <div id="optimized_zipcode_display">
