--- a/Test/views/findYourPlace.html
+++ b/Test/views/findYourPlace.html
@@ -125,8 +125,8 @@
                     var business = data[i];
                     var latitude = business.latitude;
                     var longitude = business.longitude;
-                    var delivery = business.delivery;
-                    var takeout = business.takeout;
+                    var delivery = (delivery == undefined) ? 'N/A' : business.delivery;
+                    var takeout = (takeout == undefined) ? 'N/A' : business.takeout;
                     var name = business.name;
                     var address = business.address;
                     var rating = business.stars;
@@ -198,8 +198,8 @@
                 var business = data[i];
                 var latitude = business.latitude;
                 var longitude = business.longitude;
-                var delivery = business.delivery;
-                var takeout = business.takeout;
+                var delivery = (delivery == undefined) ? 'N/A' : business.delivery;
+                var takeout = (takeout == undefined) ? 'N/A' : business.takeout;
                 var name = business.name;
                 var address = business.address;
                 var rating = business.stars;
