small changes with fotn

--- a/Test/views/index.html
+++ b/Test/views/index.html
@@ -39,6 +39,19 @@
 
             }
 
+            .button {
+              background-color: #337AB7;
+              border: none;
+              color: white;
+              padding: 20px;
+              text-align: center;
+              text-decoration: none;
+              display: inline-block;
+              font-size: 16px;
+              margin: 4px 2px;
+              border-radius: 12px;
+            }
+
             </style>
     </head>
     <body data-spy="scroll" data-target=".scrollspy">
