--- a/Test/views/knowYourPlace.html
+++ b/Test/views/knowYourPlace.html
@@ -7,12 +7,14 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <style>
       #map_wrapper {
+          font-family: "Helvetica";
           margin-left: 30%; /* should match sidebar width */
           overflow: hidden; /* cut off any overflow */
           height: 100%; /* fill up main div height */
         }
 
         #sidebar {
+          font-family: "Helvetica";
           width: 30%; /* adjust sidebar width as percentage of main div */
           max-height: 100%; /* Never exceed main div height on small screens */
           height: 600px;
@@ -28,6 +30,7 @@
         }
 
         .main {
+          font-family: "Helvetica";
           max-width: 100vw; /* set max desired width for the ENTIRE set up */
           height: 600px; /* set max desired height for the ENTIRE set up */
           max-height: 100vh; /* make sure entire setup height never exceeds device height */
@@ -35,6 +38,7 @@
 
         /* Style the button that is used to open and close the collapsible content */
         .collapsible {
+          font-family: "Helvetica";
           background-color: #eee;
           color: #444;
           cursor: pointer;
