--- a/Test/views/findYourPlace.html
+++ b/Test/views/findYourPlace.html
@@ -9,11 +9,13 @@
     <meta charset="utf-8">
     <style>
       #map_wrapper {
+        font-family: "Helvetica";
           margin-left: 30%; /* should match sidebar width */
           overflow: hidden; /* cut off any overflow */
           height: 100%; /* fill up main div height */
         }
         #sidebar {
+          font-family: "Helvetica";
           width: 30%; /* adjust sidebar width as percentage of main div */
           max-height: 100%; /* Never exceed main div height on small screens */
           height: 600px;
@@ -27,12 +29,14 @@
           color: #999;
         }
         .main {
+          font-family: "Helvetica";
           max-width: 100vw; /* set max desired width for the ENTIRE set up */
           height: 600px; /* set max desired height for the ENTIRE set up */
           max-height: 100vh; /* make sure entire setup height never exceeds device height */
         }
         /* Style the button that is used to open and close the collapsible content */
         .collapsible {
+          font-family: "Helvetica";
           background-color: #eee;
           color: #444;
           cursor: pointer;
@@ -354,7 +358,7 @@
           <input type="button" onclick="location.href='/';" value="Go Back" /> </center>
       
       <div id="optimized_zipcode_display">
-        The best zipcode for is: {{zipcode}}
+        The best zipcode for you is: {{zipcode}}
       </div>        
         
         </span>
