--- a/Test/views/findYourPlace.html
+++ b/Test/views/findYourPlace.html
@@ -9,13 +9,13 @@
     <meta charset="utf-8">
     <style>
       #map_wrapper {
-        font-family: "Helvetica";
+        font-family: "Helvetica Neue";
           margin-left: 30%; /* should match sidebar width */
           overflow: hidden; /* cut off any overflow */
           height: 100%; /* fill up main div height */
         }
         #sidebar {
-          font-family: "Helvetica";
+          font-family: "Helvetica Neue";
           width: 30%; /* adjust sidebar width as percentage of main div */
           max-height: 100%; /* Never exceed main div height on small screens */
           height: 600px;
@@ -29,14 +29,14 @@
           color: #999;
         }
         .main {
-          font-family: "Helvetica";
+          font-family: "Helvetica Neue";
           max-width: 100vw; /* set max desired width for the ENTIRE set up */
           height: 600px; /* set max desired height for the ENTIRE set up */
           max-height: 100vh; /* make sure entire setup height never exceeds device height */
         }
         /* Style the button that is used to open and close the collapsible content */
         .collapsible {
-          font-family: "Helvetica";
+          font-family: "Helvetica Neue";
           background-color: #eee;
           color: #444;
           cursor: pointer;
